# django-last-active

./: .gitignore  LICENSE  README.md  README.rst  setup.cfg
last_active/: admin.py  apps.py  middleware.py  models.py  settings.py  tests.py
last_active/migrations/: 0001_0002_squashed_initial.py  0001_initial.py  0002_add_last_active_to_user.py  0002_define_id_field.py
