[metadata]
name = django-last-active
version = 0.1
description = A Django app to track when a user is last active and eventually provide weekly active user stats
long_description = file: README.rst
url = https://github.com/GreenDeployHQ/django-last-active/
author = KimSia, Sim
author_email = kimsia@GreenDeployHQ.com
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.9
install_requires =
    Django >= 2.2